force-app/main/default/objects/Bank_Account_Details__c.object
<CustomObject>
    <fields>
        <fullName>Account_Tyoe__c</fullName>
        <label>Account Tyoe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Salary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <label>Bank Account Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Account Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Account Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>